# APP-Virgen-del-Carmen

./: .gitignore  pyproject.toml  ver_asistencias.py  ver_columnas.py
data/: asistencias.db
src/app_virgen_del_carmen.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/asistencias/: db.py  models.py
src/asistencias/api/: alumnos.py  asistencias.py  main.py
src/asistencias/core/: config.py
web-pwa/: index.html  manifest.webmanifest  scanner.html  service-worker.js  test_cam.html
web-pwa/css/: reponsive.css  style.css
web-pwa/js/: app.js  scanner.js
